# AoC_2022

./: README.md  init_repo.py  pyproject.toml
day_01/: README.md  day_01.ipynb
day_02/: README.md  day_02.ipynb
day_03/: README.md  day_03.ipynb
day_04/: README.md  day_04.ipynb
day_05/: README.md
day_06/: README.md  day_06.ipynb
day_07/: README.md
day_08/: README.md
day_09/: README.md
day_1/: README.md
day_10/: README.md
day_11/: README.md
day_12/: README.md
day_13/: README.md
day_14/: README.md
day_15/: README.md
day_16/: README.md
day_17/: README.md
day_18/: README.md
day_19/: README.md  day_19.ipynb
day_2/: README.md
day_20/: README.md
day_21/: README.md
day_22/: README.md
day_23/: README.md
day_24/: README.md
day_25/: README.md
day_3/: README.md
day_4/: README.md
day_5/: README.md
day_6/: README.md
day_7/: README.md
day_8/: README.md
day_9/: README.md
