[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Gaffeurs <gafferus@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter-nbutils = "^0.1.3"
jupyter = "^1.0.0"
pandas = "^1.5.2"
pendulum = "^2.1.2"
requests = "^2.28.1"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
dash = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
